Removed state from example

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,7 +16,7 @@
        Any variable you pass into res.render will be available by name in the template through
        the curly braces
   -->
-  <p>The current set name is {{currentName}}</p>
+  <p>The newest cat is {{currentName}}!</p>
   <a href="/page1">Page 1</a>
   <a href="/page2">Page 2</a>
   <a href="/page3">Page 3</a>
