--- a/views/page3.handlebars
+++ b/views/page3.handlebars
@@ -14,5 +14,24 @@
   <a href="/">Home</a>
   <a href="/page1">Page 1</a>
   <a href="/page2">Page 2</a>
+  <a href="/page4">Page 4</a>
+
+  <form action="/makeDog" method="post">
+    <label for="firstName">First name:</label>
+    <input type="text" name="firstName" value="">
+    <label for="lastName">Last Name: </label>
+    <input type="text" name="lastName" value="">
+    <label for="breed">Breed: </label>
+    <input type="text" name="breed" value="">
+    <label for="age">Age:</label>
+    <input type="number" name="age" value="">
+    <input type="submit" value="submit">
+  </form>
+
+  <form action="findDog" method="GET">
+    <label for="name">Name to search for (Case Sensitive):</label>
+    <input type="text" name="name" value="">
+    <input type="submit" value="Submit">
+  </form>
 </body>
 </html>
